--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "crud-server",
   "version": "1.0.0",
   "description": "Simple CRUD server for rs school",
-  "main": "app.js",
+  "main": "app.ts",
   "scripts": {
-    "start": "node app.js"
+    "start": "nodemon src/app.ts",
+    "dev": "nodemon src/app.ts"
   },
   "type": "module",
   "repository": {
@@ -14,6 +15,7 @@
   "license": "ISC",
   "homepage": "https://github.com/UlianaSavi/CRUD_server",
   "devDependencies": {
+    "@types/node": "^20.3.1",
     "typescript": "^5.1.3"
   }
 }
