--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "crud-server",
   "version": "1.0.0",
   "description": "Simple CRUD server for rs school",
-  "main": "app.ts",
+  "main": "./src/app.ts",
   "scripts": {
-    "start": "nodemon src/app.ts",
-    "dev": "nodemon src/app.ts"
+    "start": "cross-env NODE_ENV=development nodemon src/app.ts",
+    "start:dev": "cross-env NODE_ENV=development nodemon src/app.ts",
+    "start:prod": "webpack build && cross-env NODE_ENV=production nodemon --watch build node --exec dist/bundle.js"
   },
   "type": "module",
   "repository": {
@@ -16,6 +17,11 @@
   "homepage": "https://github.com/UlianaSavi/CRUD_server",
   "devDependencies": {
     "@types/node": "^20.3.1",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "webpack": "^5.87.0",
+    "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "cross-env": "^7.0.3"
   }
 }
