--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
   "homepage": "https://github.com/UlianaSavi/CRUD_server",
   "devDependencies": {
     "@types/node": "^20.3.1",
+    "@types/uuid": "^9.0.2",
     "typescript": "^5.1.3",
     "webpack": "^5.87.0",
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
     "cross-env": "^7.0.3",
-    "dotenv": "^16.1.4"
+    "dotenv": "^16.1.4",
+    "uuid": "^9.0.0"
   }
 }
